// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accordion Default 1`] = `
<div
  className="sc-bdfBwQ cyKrOT"
  id=""
  onBlur={[Function]}
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="sc-gsTCUz hFBqhS"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Accordion title
    <img
      alt="chevron icon"
      className="sc-dlfnbm crIBv"
      src="chevron.svg"
    />
  </div>
  <div
    className="sc-hKgILt dxNlHL"
  >
    <div>
      Accordion content 
      <img
        alt="test"
        src="test.jpg"
        style={
          Object {
            "width": "200px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Full Length 1`] = `
<button
  className="sc-eCssSg hKGSHc"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Full length button
  </span>
</button>
`;

exports[`Storyshots Button Icon 1`] = `
<button
  className="sc-eCssSg eGIcsz"
  disabled={false}
  id=""
  onClick={[Function]}
  size="small"
  style={Object {}}
  type="button"
>
  <img
    alt=""
    className="sc-gKsewC hjbgKA"
    data-testid="button-icon"
    label=""
    src="success.svg"
  />
  
</button>
`;

exports[`Storyshots Button Large 1`] = `
<button
  className="sc-eCssSg kjrsjM"
  disabled={false}
  id=""
  onClick={[Function]}
  size="large"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    This is large button
  </span>
</button>
`;

exports[`Storyshots Button Medium 1`] = `
<button
  className="sc-eCssSg guAkEj"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Medium button
  </span>
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-eCssSg ejOtqW"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Primary button
  </span>
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-eCssSg guAkEj"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Seconday button
  </span>
</button>
`;

exports[`Storyshots Button Small 1`] = `
<button
  className="sc-eCssSg krpAmW"
  disabled={false}
  id=""
  onClick={[Function]}
  size="small"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Small button
  </span>
</button>
`;

exports[`Storyshots Button With Icon 1`] = `
<button
  className="sc-eCssSg ejOtqW"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  <img
    alt=""
    className="sc-gKsewC kcRjzf"
    data-testid="button-icon"
    label="icon button"
    src="success.svg"
  />
  <span
    className="sc-jSgupP eUZApH"
  >
    icon button
  </span>
</button>
`;

exports[`Storyshots Card Default Card 1`] = `
<div
  className="sc-iBPRYJ PuMGI"
  id=""
  style={
    Object {
      "width": "400px",
    }
  }
>
  <div>
    This is Card component
  </div>
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<label
  className="sc-fubCfw jqBYfx"
  disabled={false}
  id=""
  style={Object {}}
>
  <input
    checked={false}
    className="sc-kEjbxe eJMstU"
    disabled={false}
    name="Checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jrAGrp fgjroJ"
    disabled={false}
  />
  Checkbox
</label>
`;

exports[`Storyshots Dropdown Default 1`] = `
<div
  className="sc-iqHYGH kfEYxo"
>
  <div
    className="sc-crrsfI fxrNDc"
    disabled={false}
  >
    <select
      aria-label="Select "
      className="sc-bqyKva btabrk"
      disabled={false}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      value=""
    >
      <option
        className="sc-kstrdz eEWbsn"
        hidden={true}
        value=""
      >
        select an option
      </option>
      <option
        className="sc-kstrdz eEWbsn"
        value="option 1"
      >
        option 1
      </option>
      <option
        className="sc-kstrdz eEWbsn"
        value="option 2"
      >
        option 2
      </option>
      <option
        className="sc-kstrdz eEWbsn"
        value="option 3"
      >
        option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown With Label 1`] = `
<div
  className="sc-iqHYGH kfEYxo"
>
  <label
    className="sc-dQppl kIgVWM"
    disabled={false}
    htmlFor="Example"
  >
    Example
  </label>
  <div
    className="sc-crrsfI fxrNDc"
    disabled={false}
  >
    <select
      aria-label="Select Example"
      className="sc-bqyKva btabrk"
      disabled={false}
      name="Example"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      value=""
    >
      <option
        className="sc-kstrdz eEWbsn"
        hidden={true}
        value=""
      >
        select an option
      </option>
      <option
        className="sc-kstrdz eEWbsn"
        value="option 1"
      >
        option 1
      </option>
      <option
        className="sc-kstrdz eEWbsn"
        value="option 2"
      >
        option 2
      </option>
      <option
        className="sc-kstrdz eEWbsn"
        value="option 3"
      >
        option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Emoji Default 1`] = `
<div
  aria-hidden="false"
  aria-label="smiley"
  className="sc-hBEYos gGbbuE"
  role="img"
>
  😃
</div>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="sc-eCssSg krpAmW"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        
        <span
          className="sc-jSgupP eUZApH"
        >
          Log out
        </span>
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="sc-eCssSg krpAmW"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        
        <span
          className="sc-jSgupP eUZApH"
        >
          Log in
        </span>
      </button>
      <button
        className="sc-eCssSg eGIcsz"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        
        <span
          className="sc-jSgupP eUZApH"
        >
          Sign up
        </span>
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="sc-eCssSg krpAmW"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            Log out
          </span>
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="sc-eCssSg krpAmW"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            Log in
          </span>
        </button>
        <button
          className="sc-eCssSg eGIcsz"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            Sign up
          </span>
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Image Clickable 1`] = `
<div
  className="sc-fodVxV bnazkq"
>
  <div
    className="sc-bkzZxe iVjGLE"
    data-testid="image-placeholder"
  />
  <img
    alt=""
    className="sc-fFubgz fUVENn"
    data-testid="image"
    id=""
    loading="lazy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onLoad={[Function]}
    role="button"
    src="test.jpg"
    style={
      Object {
        "width": "300px",
      }
    }
    tabIndex={0}
  />
</div>
`;

exports[`Storyshots Image Default 1`] = `
<div
  className="sc-fodVxV bnazkq"
>
  <div
    className="sc-bkzZxe iVjGLE"
    data-testid="image-placeholder"
  />
  <img
    alt=""
    className="sc-fFubgz iHZSMX"
    data-testid="image"
    id=""
    loading="lazy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onLoad={[Function]}
    role="img"
    src="test.jpg"
    style={
      Object {
        "width": "300px",
      }
    }
    tabIndex={-1}
  />
</div>
`;

exports[`Storyshots Image Zoomable 1`] = `
<div
  style={
    Object {
      "height": "200px",
      "width": "300px",
    }
  }
>
  <div
    className="sc-fodVxV bnazkq"
  >
    <div
      className="sc-bkzZxe iVjGLE"
      data-testid="image-placeholder"
    />
    <img
      alt=""
      className="sc-fFubgz kIhrBZ"
      data-testid="image"
      id=""
      loading="lazy"
      onClick={[Function]}
      onKeyDown={[Function]}
      onLoad={[Function]}
      role="img"
      src="test.jpg"
      style={
        Object {
          "width": "300px",
        }
      }
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="sc-idOhPF ejEqMl"
>
  
  <div
    className="sc-dIUggk ccmXXp"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-hHftDr huQVCk"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    
  </div>
</div>
`;

exports[`Storyshots Input With Error 1`] = `
<div
  className="sc-idOhPF ejEqMl"
>
  
  <div
    className="sc-dIUggk ccmXXp"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-hHftDr gnZhyG"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    
  </div>
  <p
    className="sc-fKFyDc gnmYYr"
  >
    This is an error!
  </p>
</div>
`;

exports[`Storyshots Input With Icon 1`] = `
<div
  className="sc-idOhPF ejEqMl"
>
  
  <div
    className="sc-dIUggk ccmXXp"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-hHftDr huQVCk"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    <img
      alt=""
      className="sc-kfzAmx bhieIY"
      data-testid="input-icon"
      role=""
      src="success.svg"
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Storyshots Input With Label 1`] = `
<div
  className="sc-idOhPF ejEqMl"
>
  <label
    className="sc-dmlrTW gzGmaF"
    disabled={false}
    htmlFor=""
  >
    Input
  </label>
  <div
    className="sc-dIUggk ccmXXp"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-hHftDr huQVCk"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    
  </div>
</div>
`;

exports[`Storyshots Modal Confirmation 1`] = `
<div
  className="sc-bBXqnf irkcij"
>
  <div
    className="sc-iwyYcG bGctip"
  >
    <div
      className="sc-cxFLnm bqxTIq"
      id=""
      style={Object {}}
    >
      <header
        className="sc-lmoMRL hvQXhJ"
      >
        <h2
          className="sc-iJuUWI jrVXUd"
        >
          Confirmation Modal Header
        </h2>
        <button
          aria-label="close modal"
          className="sc-eCssSg guAkEj sc-giIncl bdNjyP"
          disabled={false}
          id=""
          onClick={[Function]}
          size="medium"
          style={Object {}}
          type="button"
        >
          <img
            alt=""
            className="sc-gKsewC hjbgKA"
            data-testid="button-icon"
            label=""
            src="close.svg"
          />
          
        </button>
      </header>
      <main>
        <p
          className="sc-ezrdKe kudlSF"
        >
          Confirmation modal content
        </p>
      </main>
      <footer
        className="sc-bYEvPH iNWBNL"
      >
        <button
          className="sc-eCssSg krpAmW sc-kLgntA hpuonK"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            confirm
          </span>
        </button>
        <button
          className="sc-eCssSg krpAmW sc-kLgntA gmLool"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            decline
          </span>
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="sc-bBXqnf irkcij"
>
  <div
    className="sc-iwyYcG bGctip"
  >
    <div
      className="sc-cxFLnm bqxTIq"
      id=""
      style={Object {}}
    >
      <header
        className="sc-lmoMRL hvQXhJ"
      >
        <h2
          className="sc-iJuUWI jrVXUd"
        >
          Modal Header
        </h2>
        <button
          aria-label="close modal"
          className="sc-eCssSg guAkEj sc-giIncl bdNjyP"
          disabled={false}
          id=""
          onClick={[Function]}
          size="medium"
          style={Object {}}
          type="button"
        >
          <img
            alt=""
            className="sc-gKsewC hjbgKA"
            data-testid="button-icon"
            label=""
            src="close.svg"
          />
          
        </button>
      </header>
      <main>
        <p
          className="sc-ezrdKe kudlSF"
        >
          Modal content
        </p>
      </main>
      <footer
        className="sc-bYEvPH iNWBNL"
      >
        <button
          className="sc-eCssSg krpAmW sc-kLgntA hpuonK"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            ok
          </span>
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Storyshots Search Default 1`] = `
<div
  className="sc-iktFzd bpHwFf"
>
  
  <div
    className="sc-hiSbYr fhUjSh"
  >
    <input
      className="sc-gWHgXt intrkR"
      data-testid="search-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={Object {}}
      type="search"
      value=""
    />
    <div
      className="sc-cBNfnY jFXPFh"
    >
      <img
        alt="magnifying-glass-icon"
        className="sc-citwmv kKjOWW"
        data-testid="search-icon"
        onClick={[Function]}
        src="magnifying-glass.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Search Expansible 1`] = `
<div
  className="sc-iktFzd bpHwFf"
>
  
  <div
    className="sc-hiSbYr RlRep"
  >
    <input
      className="sc-gWHgXt dulLnq"
      data-testid="search-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={Object {}}
      type="search"
      value=""
    />
    <div
      className="sc-cBNfnY jFXPFh"
    >
      <img
        alt="magnifying-glass-icon"
        className="sc-citwmv irVemK"
        data-testid="search-icon"
        onClick={[Function]}
        src="magnifying-glass.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Search With Label 1`] = `
<div
  className="sc-iktFzd bpHwFf"
>
  <label
    className="sc-jJEJSO cJBysW"
    disabled={false}
    htmlFor=""
  >
    Search
  </label>
  <div
    className="sc-hiSbYr fhUjSh"
  >
    <input
      className="sc-gWHgXt intrkR"
      data-testid="search-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={Object {}}
      type="search"
      value=""
    />
    <div
      className="sc-cBNfnY jFXPFh"
    >
      <img
        alt="magnifying-glass-icon"
        className="sc-citwmv kKjOWW"
        data-testid="search-icon"
        onClick={[Function]}
        src="magnifying-glass.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots ShowMore With List 1`] = `
<div
  className="sc-jcVebW eeRAOh"
  id=""
  style={Object {}}
>
  <div
    className="sc-iBaPrD fEVWxS"
    style={
      Object {
        "maxHeight": "5.6rem",
      }
    }
  >
    <ul>
      <li>
        item 1
      </li>
      <li>
        item 2
      </li>
      <li>
        item 3
      </li>
      <li>
        item 4
      </li>
      <li>
        item 5
      </li>
      <li>
        item 6
      </li>
    </ul>
  </div>
  <a
    className="sc-bZSQDF khCpsC"
    data-testid="show-more-link"
    href=""
    onClick={[Function]}
  >
    show more
     
    <img
      alt="show more icon"
      className="sc-iUuytg doCOaz"
      src="double-chevron.svg"
    />
  </a>
</div>
`;

exports[`Storyshots ShowMore With String 1`] = `
<div
  className="sc-jcVebW eeRAOh"
  id=""
  style={Object {}}
>
  <div
    className="sc-iBaPrD fEVWxS"
    style={
      Object {
        "maxHeight": "5.6rem",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae mollis velit. Vestibulum lacinia nisi vitae lorem sollicitudin, vel ultricies enim suscipit. Etiam vel sodales dolor. Nunc iaculis quis arcu faucibus tincidunt. Maecenas blandit dapibus porttitor. Quisque sed mauris elit. Ut placerat, augue ut blandit ultricies, nunc nulla vehicula mi, in vehicula urna lectus nec nibh. Aenean quis risus imperdiet, bibendum mauris vitae, consequat tortor. Donec aliquam ante vel turpis fringilla facilisis. Integer varius non lacus id ultrices. In eleifend dolor ante, congue placerat elit maximus eget. Duis varius ligula erat, et varius neque euismod ac. In vitae posuere nisl. Sed non justo tortor.
  Integer risus est, feugiat at ultrices vitae, pretium in est. In vel tristique augue. Nam tempor neque erat, vitae cursus diam eleifend non. Aliquam libero odio, vestibulum at nunc sit amet, suscipit suscipit libero. Nam ac pretium felis, eu convallis libero. Phasellus quis odio sit amet nibh tempor placerat non sed nunc. Aliquam pellentesque efficitur iaculis. Cras eget gravida leo.
  Ut sed mattis erat. In in nunc eu ligula egestas viverra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur fermentum sem mauris, semper consequat urna sagittis sed. Maecenas lacinia nulla lorem, quis condimentum orci ultricies quis. Aliquam erat volutpat. Vestibulum volutpat, metus quis malesuada lobortis, quam erat accumsan lectus, nec bibendum leo libero facilisis risus. Nulla sed viverra orci.
  </div>
  <a
    className="sc-bZSQDF khCpsC"
    data-testid="show-more-link"
    href=""
    onClick={[Function]}
  >
    show more
     
    <img
      alt="show more icon"
      className="sc-iUuytg doCOaz"
      src="double-chevron.svg"
    />
  </a>
</div>
`;

exports[`Storyshots Step Default 1`] = `
<div
  className="sc-eggNIi ljUnnH"
  id=""
  style={Object {}}
>
  <div>
    Step 
  </div>
</div>
`;

exports[`Storyshots Stepper Landscape 1`] = `
<div
  className="sc-cTkwdZ hFYrLD"
  data-steps={3}
  id=""
  style={
    Object {
      "backgroundColor": "gray",
    }
  }
>
  <ul
    aria-label="progress"
    className="sc-jNMdTA bqTjiY"
    role="group"
  >
    <progress
      className="sc-bBrOnJ fqRdbB"
      max="100"
      value={0}
    />
    <li
      aria-current="step"
      className="sc-dOSReg dbAlWW"
    >
      1
    </li>
    <li
      aria-current="step"
      className="sc-dOSReg gUictP"
    >
      2
    </li>
    <li
      aria-current="step"
      className="sc-dOSReg gUictP"
    >
      3
    </li>
  </ul>
  <div
    className="sc-cOajty jmLzdl"
  >
    <div
      className="sc-AzgDb hqbrqw"
    >
      <div
        className="sc-eggNIi ljUnnH"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 1 content
        </p>
      </div>
      <div
        className="sc-eggNIi fbDEhZ"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 2 content
        </p>
      </div>
      <div
        className="sc-eggNIi fbDEhZ"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 3 content
        </p>
      </div>
    </div>
    <footer
      className="sc-khAkjo lpksMG"
    >
      <button
        className="sc-eCssSg krpAmW sc-hTZhsR sc-jgHCyG cLIpru dHZwiW"
        data-testid="next-button"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        <img
          alt=""
          className="sc-gKsewC hjbgKA"
          data-testid="button-icon"
          label=""
          src="double-chevron.svg"
        />
        
      </button>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Stepper Portrait 1`] = `
<div
  className="sc-cTkwdZ gpSyH"
  data-steps={3}
  id=""
  style={
    Object {
      "backgroundColor": "gray",
    }
  }
>
  <ul
    aria-label="progress"
    className="sc-jNMdTA hWhVGG"
    role="group"
  >
    <progress
      className="sc-bBrOnJ dnSymM"
      max="100"
      value={0}
    />
    <li
      aria-current="step"
      className="sc-dOSReg dbAlWW"
    >
      1
    </li>
    <li
      aria-current="step"
      className="sc-dOSReg gUictP"
    >
      2
    </li>
    <li
      aria-current="step"
      className="sc-dOSReg gUictP"
    >
      3
    </li>
  </ul>
  <div
    className="sc-cOajty Kviti"
  >
    <div
      className="sc-AzgDb hqbrqw"
    >
      <div
        className="sc-eggNIi ljUnnH"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 1 content
        </p>
      </div>
      <div
        className="sc-eggNIi fbDEhZ"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 2 content
        </p>
      </div>
      <div
        className="sc-eggNIi fbDEhZ"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 3 content
        </p>
      </div>
    </div>
    <footer
      className="sc-khAkjo lpksMG"
    >
      <button
        className="sc-eCssSg krpAmW sc-hTZhsR sc-jgHCyG cLIpru dHZwiW"
        data-testid="next-button"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        <img
          alt=""
          className="sc-gKsewC hjbgKA"
          data-testid="button-icon"
          label=""
          src="double-chevron.svg"
        />
        
      </button>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Tab Active 1`] = `
<li
  aria-selected={true}
  className="sc-gTgzIj iRrzei"
  disabled={false}
  id=""
  onClick={[Function]}
  onKeyDown={[Function]}
  role="tab"
  style={Object {}}
  tabIndex={0}
>
  Tab 1
</li>
`;

exports[`Storyshots Tab Default 1`] = `
<li
  aria-selected={false}
  className="sc-gTgzIj kQbUvv"
  disabled={false}
  id=""
  onClick={[Function]}
  onKeyDown={[Function]}
  role="tab"
  style={Object {}}
  tabIndex={0}
>
  Tab 1
</li>
`;

exports[`Storyshots Tabs Default 1`] = `
<div
  className="sc-laRPJI libXSK"
  id=""
  style={Object {}}
>
  <div
    className="sc-iNqMTl wxkoa"
  >
    <ul
      aria-label="Select "
      className="sc-jeGSBP fdlFMO"
      role="tablist"
    >
      <li
        aria-selected={true}
        className="sc-gTgzIj iRrzei"
        disabled={false}
        id=""
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        style={Object {}}
        tabIndex={0}
      >
        Tab 1
      </li>
      <li
        aria-selected={false}
        className="sc-gTgzIj kQbUvv"
        disabled={false}
        id=""
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        style={Object {}}
        tabIndex={0}
      >
        Tab 2
      </li>
    </ul>
  </div>
  <div
    aria-labelledby="Tab 1"
    className="sc-eJMQSu"
    role="tabpanel"
  >
    <div
      className="sc-nFpLZ QWJJu"
    />
    <div>
      Tab 1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Default 1`] = `
<div
  className="sc-higXBA drALza"
>
  <textarea
    className="sc-ehSCib laVInk"
    data-testid="textarea-field"
    disabled={false}
    id=""
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    rows={5}
    style={Object {}}
    value="hello"
  />
</div>
`;

exports[`Storyshots Textarea With Error 1`] = `
<div
  className="sc-higXBA drALza"
>
  <textarea
    className="sc-ehSCib bqNRjW"
    data-testid="textarea-field"
    disabled={false}
    id=""
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    rows={5}
    style={Object {}}
    value="hello"
  />
  <p
    className="sc-gGmIRh dQBZkT"
  >
    This is an error!
  </p>
</div>
`;

exports[`Storyshots Textarea With Label 1`] = `
<div
  className="sc-higXBA drALza"
>
  <label
    className="sc-lcujXC gexqHL"
    disabled={false}
    htmlFor=""
  >
    Textarea
  </label>
  <textarea
    className="sc-ehSCib laVInk"
    data-testid="textarea-field"
    disabled={false}
    id=""
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    rows={5}
    style={Object {}}
    value="hello"
  />
</div>
`;

exports[`Storyshots Toast Alert 1`] = `
<div
  className="sc-clsHhM deqtnG"
  id=""
  style={Object {}}
  type="alert"
>
  <button
    className="sc-eCssSg krpAmW sc-fbkhIv cYSqLf"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close.svg"
    />
    
  </button>
  <img
    alt="alert.svg icon"
    className="sc-GqfZa fSAEnI"
    src="alert.svg"
  />
  <div
    className="sc-fWSCIC jBLjmt"
    type="alert"
  >
    alert toast
  </div>
</div>
`;

exports[`Storyshots Toast Info 1`] = `
<div
  className="sc-clsHhM kmbzaz"
  id=""
  style={Object {}}
  type="info"
>
  <button
    className="sc-eCssSg krpAmW sc-fbkhIv cYSqLf"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close.svg"
    />
    
  </button>
  <img
    alt="info.svg icon"
    className="sc-GqfZa fSAEnI"
    src="info.svg"
  />
  <div
    className="sc-fWSCIC jBLjmt"
    type="info"
  >
    info toast
  </div>
</div>
`;

exports[`Storyshots Toast Success 1`] = `
<div
  className="sc-clsHhM hJgXAv"
  id=""
  style={Object {}}
  type="success"
>
  <button
    className="sc-eCssSg krpAmW sc-fbkhIv cYSqLf"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close.svg"
    />
    
  </button>
  <img
    alt="success.svg icon"
    className="sc-GqfZa fSAEnI"
    src="success.svg"
  />
  <div
    className="sc-fWSCIC jBLjmt"
    type="success"
  >
    success toast
  </div>
</div>
`;

exports[`Storyshots Toast Warning 1`] = `
<div
  className="sc-clsHhM cXEpBB"
  id=""
  style={Object {}}
  type="warning"
>
  <button
    className="sc-eCssSg krpAmW sc-fbkhIv cYSqLf"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close.svg"
    />
    
  </button>
  <img
    alt="warning.svg icon"
    className="sc-GqfZa fSAEnI"
    src="warning.svg"
  />
  <div
    className="sc-fWSCIC jBLjmt"
    type="warning"
  >
    warning toast
  </div>
</div>
`;

exports[`Storyshots ToggleSwitch Default 1`] = `
<label
  className="sc-dwfUOf jsJDtO"
  disabled={false}
  style={Object {}}
>
  <input
    checked={false}
    className="sc-aemoO fXHyJh"
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={false}
    className="sc-jHVexB hALwsU"
    data-testid="toggle-slider"
    disabled={false}
    label=""
  >
    <span
      className="sc-TmcTc cFalRK"
      disabled={false}
    />
    <span
      className="sc-TmcTc cFalRK"
    >
      on
    </span>
  </span>
</label>
`;

exports[`Storyshots ToggleSwitch With Label 1`] = `
<label
  className="sc-dwfUOf jsJDtO"
  disabled={false}
  style={Object {}}
>
  <input
    checked={false}
    className="sc-aemoO fXHyJh"
    disabled={false}
    name="ToggleSwitch"
    onChange={[Function]}
    type="checkbox"
  />
  ToggleSwitch
  <span
    checked={false}
    className="sc-jHVexB dlVhJc"
    data-testid="toggle-slider"
    disabled={false}
    label="ToggleSwitch"
  >
    <span
      className="sc-TmcTc cFalRK"
      disabled={false}
    />
    <span
      className="sc-TmcTc cFalRK"
    >
      on
    </span>
  </span>
</label>
`;

exports[`Storyshots Tooltip Default 1`] = `
<div
  className="sc-jONnTn eiLBts"
  id=""
  style={
    Object {
      "marginLeft": "100px",
    }
  }
>
  Tooltip
</div>
`;
